update to kernel alpha